--- a/contents/ui/config.ui
+++ b/contents/ui/config.ui
@@ -50,7 +50,7 @@
       <item row="3" column="0">
        <widget class="QLabel" name="label">
         <property name="text">
-         <string>Duration of the animations:</string>
+         <string>Duration of animations:</string>
         </property>
        </widget>
       </item>
@@ -81,7 +81,7 @@
      <property name="title">
       <string>Desktops bar</string>
      </property>
-     <layout class="QFormLayout" name="formLayout">
+     <layout class="QGridLayout" name="gridLayout_4">
       <item row="0" column="0">
        <widget class="QCheckBox" name="kcfg_showDesktopsBarBackground">
         <property name="text">
