--- a/contents/ui/config.ui
+++ b/contents/ui/config.ui
@@ -48,13 +48,23 @@
        </widget>
       </item>
       <item row="3" column="0">
+       <widget class="QCheckBox" name="kcfg_closeOnMiddleClick">
+        <property name="text">
+         <string>Close windows with middle click</string>
+        </property>
+        <property name="checked">
+         <bool>true</bool>
+        </property>
+       </widget>
+      </item>
+      <item row="4" column="0">
        <widget class="QLabel" name="label">
         <property name="text">
          <string>Duration of the animations:</string>
         </property>
        </widget>
       </item>
-      <item row="3" column="1">
+      <item row="4" column="1">
        <widget class="QSpinBox" name="kcfg_animationsDuration">
         <property name="suffix">
          <string>ms</string>
