--- a/contents/ui/config.ui
+++ b/contents/ui/config.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>640</width>
-    <height>402</height>
+    <width>380</width>
+    <height>372</height>
    </rect>
   </property>
   <layout class="QGridLayout" name="gridLayout">
@@ -81,6 +81,27 @@
         <property name="value">
          <number>250</number>
         </property>
+       </widget>
+      </item>
+      <item row="5" column="0">
+       <widget class="QLabel" name="label_3">
+        <property name="text">
+         <string>Search method:</string>
+        </property>
+       </widget>
+      </item>
+      <item row="5" column="1">
+       <widget class="QComboBox" name="kcfg_searchMethod">
+        <item>
+         <property name="text">
+          <string>Krunner</string>
+         </property>
+        </item>
+        <item>
+         <property name="text">
+          <string>Filter windows</string>
+         </property>
+        </item>
        </widget>
       </item>
      </layout>
